<resources>
    <string name="app_name">DemoVolley</string>
    <string name="login">Login</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="empty_email">Please enter email</string>
    <string name="empty_password">Please enter password</string>

</resources>
